<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:shapeAppearanceOverlay="@style/CutShape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:contentDescription="@string/stop"
            android:gravity="center_vertical"
            android:src="@drawable/flag"
            app:tint="@color/black">
        </ImageView>

        <TextView
            android:id="@+id/TimeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/digital_7_mono"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="34sp">
        </TextView>

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:contentDescription="@string/close"
            android:gravity="center_vertical"
            android:src="@drawable/close"
            app:tint="@color/black">
        </ImageView>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
